--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 img {
-     border-radius: 20px;
+     border-radius: 50%;
      width: 320px;
      height: 320px;
 }
@@ -29,7 +29,7 @@ li {
     list-style: none;
 }
 a {
-    background-color: limegreen;
+    background-color: royalblue;
     color: white;
     padding: 15px;
     text-decoration: none;
@@ -37,6 +37,10 @@ a {
     width: 310px;
     height: 25px;
     border-radius: 5px;
+}
+a:hover {
+    background-color: white;
+    color: royalblue;
 }
 footer {
     color: white;
